--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -1,5 +1,5 @@
 upstream servers {
-    server gerencial-api:8080 weight=1 fail_timeout=5s;
+    server gerencial-front:4200 weight=1 fail_timeout=5s;
 }
 
 server {
@@ -12,7 +12,7 @@ server {
     }
 
     location /server1/ {
-        proxy_pass http://gerencial-api:8080/;
+        proxy_pass http://gerencial-front:4200/;
         proxy_set_header Host $host;
     }
 
