--- a/deploy/docker/docker-compose.yml
+++ b/deploy/docker/docker-compose.yml
@@ -13,26 +13,12 @@ services:
       - gerencial-front
 
   gerencial-front:
-    container_name: gerencial-front
-    image: vinifontana/gerencial_fron:latest
+    container_name: gpa-gerencial-front
+    image: gpa_tributario/gerencial_front:latest
+    ports:
+      - "4200:4200"
     networks:
       - gerencial-network
-    depends_on:
-      - gerencial-api
-    restart: always
-
-  gerencial-api:
-    container_name: gerencial-api
-    image: gpa_tributario/gerencial:latest
-    environment:
-      SPRING_PROFILES_ACTIVE: dev
-      DATABASE: "host.docker.internal"
-      PORT: 27017
-      TZ: "America/Sao_Paulo"
-    networks:
-      - gerencial-network
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     restart: always
 
 networks:
