--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-!**/deploy/terraform/.terraform/
+deploy/terraform/.terraform/
 
 ### STS ###
 .apt_generated
